añadido texto tests